# python-development-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main_workflow.yaml
src/: main.py
src/shapes/: __init__.py  base.py  circle.py  rectangle.py
tests/: test_shapes.py
