[tool.poetry]
name = "python-development-template"
version = "0.1.0"
description = ""
authors = ["david00721 <david007214@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
vulture = "^2.11"
coverage = "^7.5.1"
black = "^24.4.2"
ruff = "^0.4.3"
pre-commit = "^3.7.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ['py311']
line-length = 79
exclude = '/(\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist)/'

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src", "tests"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "c-extension-no-member",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "too-many-statements",
]

[tool.pylint.REPORTS]
score = false

[tool.pylint.FORMAT]
max-line-length = 79

[tool.vulture]
exclude = ["tests/"]
min_confidence = 75
sort_by_size = true
verbose = true

[tool.coverage.report]
fail_under = 50

[tool.coverage.run]
omit = ["*__init__.py", "*__main__.py"]

[tool.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src"]

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
